--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
          <a href="https://bcrw.apple.com/urn:biz:957ea80f-ecde-4cc6-9683-b5181318eb19" class="button">
              Message with a Specialist
          </a>
-         <a href="https://www.cisco.com" class="button">Video with a Specialist</a>
+         <a href="https://wxsd-sales.github.io/video-meeting-webpage?name=DuaneGraham&email=duagraha@cisco.com" class="button">Video with a Specialist</a>
      </div>
  
      
