--- a/index.html
+++ b/index.html
@@ -1,102 +1,85 @@
 <!DOCTYPE html>
- <html lang="en">
- <head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Communication Options</title>
-     <style>
-         body {
-             margin: 0;
-             font-family: sans-serif;
-             background-color: #11172b;
-             color: white;
-             display: flex;
-             flex-direction: column; /* Align items in a column */
-             align-items: center;
-             min-height: 100vh;
-             width: 100vw;
-             box-sizing: border-box;
-             padding: 40px 20px; /* Add more top padding */
-         }
- 
-         .container {
-             display: flex;
-             flex-direction: column;
-             align-items: center;
-             width: 95%; /* Make container responsive */
-             max-width: 500px; /* Limit maximum width */
-         }
- 
-         .logo-container {
-             margin-bottom: 20px; /* Reduced margin */
-             width: 100%; /* Make logo container responsive */
-             max-width: 250px; /* Slightly reduced max width */
-         }
- 
-         .logo {
-             display: block;
-             width: 100%;
-             height: auto;
-             margin: 0 auto;
-         }
- 
-         .instruction-text {
-             text-align: center;
-             margin-bottom: 15px; /* Reduced margin */
-             font-size: 1em;
-             color: #ccc;
-         }
- 
-         .button {
-             display: block;
-             width: 100%;
-             padding: 15px; /* Reduced padding */
-             margin-bottom: 10px; /* Reduced margin */
-             background-color: #e51937;
-             color: white;
-             text-align: center;
-             border-radius: 10px;
-             text-decoration: none;
-             font-weight: bold;
-             font-size: 16px; /* Reduced font size */
-             border: none;
-             cursor: pointer;
-             box-sizing: border-box; /* Ensure padding doesn't increase the overall width */
-         }
- 
-         /* Adjust font size for smaller screens */
-         @media (max-width: 600px) {
-             .instruction-text {
-                 font-size: 0.9em;
-             }
-             .button {
-                 padding: 12px;
-                 font-size: 14px;
-                 margin-bottom: 8px;
-             }
-             .logo-container {
-                 margin-bottom: 15px;
-                 max-width: 200px;
-             }
-         }
-     </style>
- </head>
- <body>
-     <div class="container">
-         <div class="logo-container">
-             <img src="https://raw.githubusercontent.com/meady35/AOD/refs/heads/main/Delta_Air_Lines___Flights___Plane_Tickets___Hotels___Cars.jpg" alt="Your Logo" class="logo">
-         </div>
-         <p class="instruction-text">Please select your preference of communication channel</p>
-         <a href="tel:+14046784635" class="button">
-             Talk to a Specialist
-         </a>
-         <a href="https://bcrw.apple.com/urn:biz:957ea80f-ecde-4cc6-9683-b5181318eb19" class="button">
-             Message with a Specialist
-         </a>
-         <a href="https://wxsd-sales.github.io/video-meeting-webpage?name=DuaneGraham&email=duagraha@cisco.com" class="button">Video with a Specialist</a>
-     </div>
- 
-     
- </body>
- </body>
- </html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kaiser Permanente Mobile Browser App</title>
+    <style>
+        body {
+            background-color: white;
+            color: #006BA6; /* Kaiser Permanente blue */
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+            color: #006BA6;
+        }
+        .option-button {
+            background-color: #006BA6;
+            color: white;
+            border: none;
+            padding: 15px;
+            margin: 10px 0;
+            width: 100%;
+            font-size: 18px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        .option-button:hover {
+            background-color: #004B91; /* Darker blue for hover */
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Kaiser Permanente</h1>
+        <p>Select an option below to trigger the corresponding webhook.</p>
+        <button class="option-button" onclick="sendWebhook(1)">Option 1: Schedule Appointment</button>
+        <button class="option-button" onclick="sendWebhook(2)">Option 2: Message Doctor</button>
+        <button class="option-button" onclick="sendWebhook(3)">Option 3: Refill Prescription</button>
+    </div>
+
+    <script>
+        async function sendWebhook(option) {
+            // Replace these with your actual webhook URLs
+            const webhookUrls = {
+                1: 'https://your-webhook-url-for-option1.example.com',
+                2: 'https://your-webhook-url-for-option2.example.com',
+                3: 'https://your-webhook-url-for-option3.example.com'
+            };
+
+            const url = webhookUrls[option];
+            const payload = {
+                action: `Option ${option} triggered`,
+                timestamp: new Date().toISOString(),
+                // Add more data as needed
+            };
+
+            try {
+                const response = await fetch(url, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify(payload),
+                });
+
+                if (response.ok) {
+                    alert(`Webhook for Option ${option} sent successfully!`);
+                } else {
+                    alert(`Failed to send webhook for Option ${option}. Status: ${response.status}`);
+                }
+            } catch (error) {
+                alert(`Error sending webhook for Option ${option}: ${error.message}`);
+            }
+        }
+    </script>
+</body>
+</html>
