--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             color: #006BA6;
         }
         .option-button {
-            background-color: #006BA6;
-            color: white;
-            border: none;
+            background-color: white; /* White background */
+            color: #006BA6; /* Blue text */
+            border: 2px solid #006BA6; /* Blue outline */
             padding: 15px;
             margin: 10px 0;
             width: 100%;
@@ -33,7 +33,9 @@
             border-radius: 5px;
         }
         .option-button:hover {
-            background-color: #004B91; /* Darker blue for hover */
+            background-color: #E6F0FA; /* Light blue background for hover */
+            color: #004B91; /* Darker blue text for hover */
+            border-color: #004B91; /* Darker blue outline for hover */
         }
     </style>
 </head>
