--- a/index.html
+++ b/index.html
@@ -16,15 +16,23 @@
             max-width: 600px;
             margin: 0 auto;
             padding: 20px;
+            text-align: center; /* Center content */
         }
         h1 {
             text-align: center;
             color: #006BA6;
+            margin-top: 10px; /* Reduced margin to balance with logo */
+        }
+        .logo {
+            max-width: 150px; /* Adjust size for mobile */
+            height: auto;
+            margin: 20px auto;
+            display: block;
         }
         .option-button {
             background-color: white; /* White background */
             color: #006BA6; /* Blue text */
-            border: 6px solid #006BA6; /* Blue outline */
+            border: 2px solid #006BA6; /* Blue outline */
             padding: 15px;
             margin: 10px 0;
             width: 100%;
@@ -41,6 +49,7 @@
 </head>
 <body>
     <div class="container">
+        <img src="https://via.placeholder.com/150x50?text=Kaiser+Permanente+Logo" alt="Kaiser Permanente Logo" class="logo">
         <h1>Kaiser Permanente</h1>
         <p>Select an option below to trigger the corresponding webhook.</p>
         <button class="option-button" onclick="sendWebhook(1)">Option 1: Schedule Appointment</button>
