--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="kaiser permanente logo - Google Search.jpeg.png" alt="Kaiser Permanente Logo" class="logo">
+        <img src="https://raw.githubusercontent.com/meady35/AOD/refs/heads/main/kaiser%20permanente%20logo%20-%20Google%20Search.jpeg.png" alt="Kaiser Permanente Logo" class="logo">
         <h1>Kaiser Permanente</h1>
         <p>Select an option below to trigger the corresponding webhook.</p>
         <button class="option-button" onclick="sendWebhook(1)">Option 1: Schedule Appointment</button>
