--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://via.placeholder.com/150x50?text=Kaiser+Permanente+Logo" alt="Kaiser Permanente Logo" class="logo">
+        <img src="https://raw.githubusercontent.com/meady35/AOD/refs/heads/main/IMG_51E41CE4DFA7-1.jpeg" alt="Kaiser Permanente Logo" class="logo">
         <h1>Kaiser Permanente</h1>
         <p>Select an option below to trigger the corresponding webhook.</p>
         <button class="option-button" onclick="sendWebhook(1)">Option 1: Schedule Appointment</button>
