--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <button class="option-button" onclick="sendWebhook(1)">Option 1: Schedule Appointment</button>
         <button class="option-button" onclick="sendWebhook(2)">Option 2: Message Doctor</button>
         <button class="option-button" onclick="sendWebhook(3)">Option 3: Refill Prescription</button>
-        <img src="https://via.placeholder.com/200x100?text=Bottom+Image" alt="Bottom Image" class="bottom-image">
+        <img src="https://raw.githubusercontent.com/meady35/AOD/refs/heads/main/IMG_51E41CE4DFA7-1.jpeg" alt="Bottom Image" class="bottom-image">
     </div>
 
     <script>
